--- a/src/MediaTimestampRenamer/MediaTimestampRenamer.csproj
+++ b/src/MediaTimestampRenamer/MediaTimestampRenamer.csproj
@@ -73,12 +73,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="FileName.cs" />
-    <Compile Include="FileNameComparer.cs" />
-    <Compile Include="GenericComparer.cs" />
-    <Compile Include="MediaFileName.cs" />
-    <Compile Include="NearestTimeComparer.cs" />
-    <Compile Include="RegExUtils.cs" />
+    <Compile Include="Plugins\DefaultPlugin.cs" />
+    <Compile Include="Plugins\MoviePlugin.cs" />
+    <Compile Include="Plugins\SonyVideoPlugin.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -87,14 +84,12 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="FileUtils.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MediaFileInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -122,6 +117,13 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Resources\RawDataFormats.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <Import Project="..\..\..\MediaFileLib\src\MediaFileLibShared\MediaFileLibShared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
